--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tamanho da Imagem de Fundo</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
             height: 100vh;
@@ -12,14 +12,23 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+  /*
+            Shorthand - background
+
+            color > image > position > repeat > [size] > attachment
+            */
+
+            /* background: black url('imagenswallpaper002.jpg') center center no-repeat cover fixed; */
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 5px solid darkblue;
-            border-radius: 15px;
+            border-radius: 15px;          
         }
     </style>
 </head>
@@ -27,7 +36,22 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet eum quo voluptatum aliquid tempora asperiores accusantium dolorum consequatur assumenda. Officia nemo dignissimos non veniam error cupiditate cumque atque modi excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officiis aliquam cum impedit eius odio sequi explicabo minima harum reprehenderit nostrum numquam, odit inventore quidem corrupti sed! Quibusdam, id quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur aperiam maxime, doloribus dolores animi quod quos nemo delectus accusantium tempore voluptatibus ad recusandae deleniti quaerat dolore exercitationem dolorum cupiditate.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet eum quo voluptatum aliquid tempora asperiores accusantium dolorum consequatur assumenda. Officia nemo dignissimos non veniam error cupiditate cumque atque modi excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officiis aliquam cum impedit eius odio sequi explicabo minima harum reprehenderit nostrum numquam, odit inventore quidem corrupti sed! Quibusdam, id quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur aperiam maxime, doloribus dolores animi quod quos nemo delectus accusantium tempore voluptatibus ad recusandae deleniti quaerat dolore exercitationem dolorum cupiditate. 
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet eum quo voluptatum aliquid tempora asperiores accusantium dolorum consequatur assumenda. Officia nemo dignissimos non veniam error cupiditate cumque atque modi excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officiis aliquam cum impedit eius odio sequi explicabo minima harum reprehenderit nostrum numquam, odit inventore quidem corrupti sed! Quibusdam, id quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur aperiam maxime, doloribus dolores animi quod quos nemo delectus accusantium tempore voluptatibus ad recusandae deleniti quaerat dolore exercitationem dolorum cupiditate. 
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet eum quo voluptatum aliquid tempora asperiores accusantium dolorum consequatur assumenda. Officia nemo dignissimos non veniam error cupiditate cumque atque modi excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officiis aliquam cum impedit eius odio sequi explicabo minima harum reprehenderit nostrum numquam, odit inventore quidem corrupti sed! Quibusdam, id quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur aperiam maxime, doloribus dolores animi quod quos nemo delectus accusantium tempore voluptatibus ad recusandae deleniti quaerat dolore exercitationem dolorum cupiditate. 
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet eum quo voluptatum aliquid tempora asperiores accusantium dolorum consequatur assumenda. Officia nemo dignissimos non veniam error cupiditate cumque atque modi excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officiis aliquam cum impedit eius odio sequi explicabo minima harum reprehenderit nostrum numquam, odit inventore quidem corrupti sed! Quibusdam, id quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur aperiam maxime, doloribus dolores animi quod quos nemo delectus accusantium tempore voluptatibus ad recusandae deleniti quaerat dolore exercitationem dolorum cupiditate. 
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet eum quo voluptatum aliquid tempora asperiores accusantium dolorum consequatur assumenda. Officia nemo dignissimos non veniam error cupiditate cumque atque modi excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officiis aliquam cum impedit eius odio sequi explicabo minima harum reprehenderit nostrum numquam, odit inventore quidem corrupti sed! Quibusdam, id quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur aperiam maxime, doloribus dolores animi quod quos nemo delectus accusantium tempore voluptatibus ad recusandae deleniti quaerat dolore exercitationem dolorum cupiditate. 
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet eum quo voluptatum aliquid tempora asperiores accusantium dolorum consequatur assumenda. Officia nemo dignissimos non veniam error cupiditate cumque atque modi excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officiis aliquam cum impedit eius odio sequi explicabo minima harum reprehenderit nostrum numquam, odit inventore quidem corrupti sed! Quibusdam, id quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur aperiam maxime, doloribus dolores animi quod quos nemo delectus accusantium tempore voluptatibus ad recusandae deleniti quaerat dolore exercitationem dolorum cupiditate. 
         </p>
     </main>
     
