--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -18,7 +18,11 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor maxime dignissimos veniam alias quidem omnis repellat doloremque facilis sapiente accusamus accusantium deleniti iure, quaerat autem ea? Nihil fugiat dignissimos voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores illo nostrum culpa ab quos modi eligendi reprehenderit, ipsum eveniet tenetur, mollitia quam rerum sapiente consectetur velit neque unde iusto quae.
     </p>
 
-    <iframe src="pag001.html" frameborder="0" width="500px" height="500px"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="500px" height="500px">
+        <p>
+            Infelizmente seu Navegador não é compatível com iframes.
+        </p>
+    </iframe>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor maxime dignissimos veniam alias quidem omnis repellat doloremque facilis sapiente accusamus accusantium deleniti iure, quaerat autem ea? Nihil fugiat dignissimos voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores illo nostrum culpa ab quos modi eligendi reprehenderit, ipsum eveniet tenetur, mollitia quam rerum sapiente consectetur velit neque unde iusto quae.
     </p>
